--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | Notifications page</title>
-  <link rel="stylesheet" href="/build.css">
+  <link rel="stylesheet" href="./build.css">
 </head>
 <body class="bg-grayish_blue-100 grid min-h-screen place-content-center">
 
