--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300" data-read="true">
       <div class="flex gap-3 items-center">
-        <img src="/assets/images/avatar-mark-webber.webp" class="aspect-square w-[4rem]" alt="mark-webber">
+        <img src="./assets/images/avatar-mark-webber.webp" class="aspect-square w-[4rem]" alt="mark-webber">
         <p class="text-grayish_blue-500"><a href="" class="text-grayish_blue-600 font-bold">Mark Webber</a> reacted to your recent post <span class="text-grayish_blue-600">My first tournament today!</span>
           <span class="text-grayish_blue-400 block">1m ago</span>
         </p>
@@ -25,7 +25,7 @@
 
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300" data-read="true">
       <div class="flex gap-3 items-center">
-        <img src="/assets/images/avatar-angela-gray.webp" class="aspect-square w-[4rem]" alt="angela-gray">
+        <img src="./assets/images/avatar-angela-gray.webp" class="aspect-square w-[4rem]" alt="angela-gray">
         <p class="text-grayish_blue-500"><a href="" class="text-grayish_blue-600 font-bold">Angela Gray</a> followed you
           <span class="text-grayish_blue-400 block">5m ago</span>
         </p>
@@ -34,7 +34,7 @@
 
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300" data-read="true">
       <div class="flex gap-3 items-center">
-        <img src="/assets/images/avatar-jacob-thompson.webp" class="aspect-square w-[4rem]" alt="angela-gray">
+        <img src="./assets/images/avatar-jacob-thompson.webp" class="aspect-square w-[4rem]" alt="angela-gray">
         <p class="text-grayish_blue-500"><a href="" class="text-grayish_blue-600 font-bold">  Jacob Thompson </a> has joined your group 
           <a href="" class="text-blue font-extrabold">
             Chess Club
@@ -46,7 +46,7 @@
   
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300">
       <div class="flex gap-3 items-start">
-        <img src="/assets/images/avatar-rizky-hasanuddin.webp" class="aspect-square w-[4rem]" alt="">
+        <img src="./assets/images/avatar-rizky-hasanuddin.webp" class="aspect-square w-[4rem]" alt="">
         
         <div class="text-grayish_blue-500 ">
           <a href="" class="text-grayish_blue-600 font-bold">Rizky Hasanuddin</a> sent you a private message
@@ -66,7 +66,7 @@
     
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300">
       <div class="flex items-center gap-3">
-        <img src="/assets/images/avatar-kimberly-smith.webp" class="aspect-square w-[4rem]" alt="">
+        <img src="./assets/images/avatar-kimberly-smith.webp" class="aspect-square w-[4rem]" alt="">
         <p class="text-grayish_blue-500">
           <a href="" class="text-grayish_blue-600 font-bold">Kimberly Smith</a> commented on your picture
           <span class="block ">1 week ago</span>
@@ -76,7 +76,7 @@
 
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300">
       <div class="flex items-center gap-3">
-        <img src="/assets/images/avatar-nathan-peterson.webp" class="aspect-square w-[4rem]" alt="">
+        <img src="./assets/images/avatar-nathan-peterson.webp" class="aspect-square w-[4rem]" alt="">
         <p class="text-grayish_blue-500">
           <a href="" class="text-grayish_blue-600 font-bold">Nathan Peterson</a> reacted to your recent post <span class="text-grayish_blue-600 font-medium">5 end-game strategies to increase your win rate</span>
           <span class="block ">2 week ago</span>
@@ -86,7 +86,7 @@
 
     <div class="group p-5 rounded-md data-[read=true]:bg-grayish_blue-300">
       <div class="flex gap-3 items-center">
-        <img src="/assets/images/avatar-jacob-thompson.webp" class="aspect-square w-[4rem]" alt="angela-gray">
+        <img src="./assets/images/avatar-jacob-thompson.webp" class="aspect-square w-[4rem]" alt="angela-gray">
         <p class="text-grayish_blue-500"><a href="" class="text-grayish_blue-600 font-bold">  Anna Kim  </a> left the group
           <a href="" class="text-blue font-extrabold">
             Chess Club
